[gd_scene load_steps=7 format=3 uid="uid://dsk5sq4ihcw7r"]

[ext_resource type="Material" uid="uid://bxaom2jg3buke" path="res://assets/arts_graphic/materials/water3d202409.tres" id="1_45n6h"]
[ext_resource type="Script" uid="uid://csbnr7co20tdh" path="res://assets/systems/water_physics/scripts/water_mesh.gd" id="2_81dym"]

[sub_resource type="CylinderMesh" id="CylinderMesh_81dym"]
top_radius = 2.0
bottom_radius = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_45n6h"]
emission_shape_scale = Vector3(2, 1, 2)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8d54n"]
shading_mode = 0
albedo_color = Color(0.501961, 0.917647, 1, 1)
disable_receive_shadows = true
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_81dym"]
material = SubResource("StandardMaterial3D_8d54n")
size = Vector2(0.01, 0.01)

[node name="WaterMesh3D" type="MeshInstance3D"]
process_mode = 1
mesh = SubResource("CylinderMesh_81dym")
surface_material_override/0 = ExtResource("1_45n6h")
script = ExtResource("2_81dym")

[node name="SwimmableArea3D" type="Area3D" parent="." groups=["water_area"]]
collision_layer = 32
collision_mask = 62
gravity_point_center = Vector3(0, 1, 0)
gravity_direction = Vector3(0, 1, 0)
linear_damp = 0.5
angular_damp = 0.5

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
amount = 60
lifetime = 12.0
preprocess = 12.0
process_material = SubResource("ParticleProcessMaterial_45n6h")
draw_pass_1 = SubResource("QuadMesh_81dym")

[connection signal="body_entered" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_body_entered"]
[connection signal="body_exited" from="SwimmableArea3D" to="." method="_on_swimmable_area_3d_body_exited"]
